crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__layout_tests__branch.snap
---
source: crates/plotnik-compiler/src/emit/layout_tests.rs
---
Test = [(identifier) @id (number) @num]
---
[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "num"
S3 "Test"
S4 "identifier"
S5 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { id, num }
T2 = Optional(T0)  ; <Node>?

[type_members]
M0: S1 → T2  ; id: T2
M1: S2 → T2  ; num: T2

[type_names]
N0: S3 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00  -ε-  [ObjectOpen]                     02
  02       Trampoline                       03
  03  -ε-  [ObjectClose]                    05
  05                                        ▶

Test:
  06  -ε-                                   09, 12
  08                                        ▶
  09   !   [Null Set(M1)] (identifier) [Node Set(M0)]  08
  12   !   [Null Set(M0)] (number) [Node Set(M1)]  08
