crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__layout_tests__cache_line_boundary.snap
---
source: crates/plotnik-compiler/src/emit/layout_tests.rs
---
Test = (array
    (identifier) @a
    (identifier) @b
    (identifier) @c
    (identifier) @d
    (identifier) @e
    [(number) @x (string) @y]
)
---
[strings]
S00 "Beauty will save the world"
S01 "a"
S02 "b"
S03 "c"
S04 "d"
S05 "e"
S06 "x"
S07 "y"
S08 "Test"
S09 "array"
S10 "identifier"
S11 "number"
S12 "string"

[type_defs]
T0 = <Node>
T1 = Struct  M0:7  ; { a, b, c, d, e, x, y }
T2 = Optional(T0)  ; <Node>?

[type_members]
M0: S01 → T0  ; a: <Node>
M1: S02 → T0  ; b: <Node>
M2: S03 → T0  ; c: <Node>
M3: S04 → T0  ; d: <Node>
M4: S05 → T0  ; e: <Node>
M5: S06 → T2  ; x: T2
M6: S07 → T2  ; y: T2

[type_names]
N0: S08 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00  -ε-  [ObjectOpen]                     02
  02       Trampoline                       03
  03  -ε-  [ObjectClose]                    05
  05                                        ▶

Test:
  06   !   (array)                          08
  07  ─‣┘  _                                20
  08  └‣─  (identifier) [Node Set(M0)]      10
  10  ─‣─  (identifier) [Node Set(M1)]      12
  12  ─‣─  (identifier) [Node Set(M2)]      14
  14  ─‣─  (identifier) [Node Set(M3)]      16
  16  ─‣─  (identifier) [Node Set(M4)]      18
  18  ─‣─  _                                21, 24, 27
  20                                        ▶
  21   !   [Null Set(M6)] (number) [Node Set(M5)]  07
  24   !   [Null Set(M5)] (string) [Node Set(M6)]  07
  27  ─‣─  _                                21, 24, 27
